--- a/metroim/templates/index.html
+++ b/metroim/templates/index.html
@@ -1,11 +1,9 @@
 {% extends 'base.html' %}
-
-{% block body %}
-<header>
-    <h1>Metroim</h1>
-</header>
-<main>
-    <h2>Линии метро:</h2>
-    <pre>{{lines | pprint}}</pre>
-</main>
-{% endblock body %}
+{% block title %} Home {% endblock %}
+{% block content %}
+<div class="row">
+    <div class="col-sm-12 mb-3">
+        <h4 class="text-center"> Welcome {% if user.first_name %}{{ user.first_name }}{% else %}{{ user.username }}{% endif %} </h4>
+    </div>
+</div>
+{% endblock content %}
